--- a/certificate.css
+++ b/certificate.css
@@ -1,3 +1,7 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500&display=swap');
+
+
 body {
     margin: 0;
 }
@@ -25,24 +29,46 @@ body {
 .number1 {
 background-image: url("ironmaiden.png");
 height: 100vh;
+display: flex;
+justify-content: center;
 }
 
 .number2 {
  background-image: url("kurtcobain.png");
  height: 100vh;
+ width: 5000px;
+ display: flex;
+ background-repeat: no-repeat;
+ position: absolute;
+text-align: center;
 }
 
 .number3 {
-background-image: url(balding.png);
-
+background-image: url("dgjfelp;'lkfdl;grel.png");
+height: 1000vh;
+width: 50000px;
+background-repeat: no-repeat;
+display: flex;
+justify-content: center;
+position: absolute;
 }
 
 .certificate{
     display: flex;
     justify-content: center;
     height: fit-content;
+    position: relative;
     
 }
+
+.typename{
+    display: flex;
+    justify-content: center;
+    text-align: center;
+
+}
+
+
 @media print{
     .right{
         display: none;
